Edited wiki page AssemblyGuide through web user interface.

--- a/wiki/AssemblyGuide.wiki
+++ b/wiki/AssemblyGuide.wiki
@@ -1,3 +1,5 @@
+#summary J1772, 30A OpenEVSE Plus v.1 or v.2
+
 =Guide for Assembling a J1772, 30A OpenEVSE.=
   ==Using OpenEVSE Plus v1 (updated for v2)==
 
