Edited wiki page EVSimulator through web user interface.

--- a/wiki/EVSimulator.wiki
+++ b/wiki/EVSimulator.wiki
@@ -1,3 +1,5 @@
+#summary Assembly and Operation.
+
 =EV Simulator Assembly and Operation=
 
   =!Usual Disclaimers apply. Proceed at your own risk!=
