Edited wiki page sidebar through web user interface.

--- a/wiki/sidebar.wiki
+++ b/wiki/sidebar.wiki
@@ -31,6 +31,7 @@
     * [OpenEVSEv1partslist Parts list to DIY V1]
     * [OpenEVSEv2partslist Parts list for DIY V2]
     * [OpenEVSEv4partslist Parts list for DIY V4]
+    * [OpenEVSEv42partslist Parts list for DIY V4.2]
     * [PCBProduction Have your PCB fabricated]
   * *Testing*
     * [EVSE_TESTING Testing your EVSE]
