Edited wiki page OpenEVSEv42partslist through web user interface.

--- a/wiki/OpenEVSEv42partslist.wiki
+++ b/wiki/OpenEVSEv42partslist.wiki
@@ -1,6 +1,6 @@
-#Parts list for through-hole Open EVSE V4.
+#Parts list for through-hole Open EVSE V4.2
 
-= Open EVSE V4 parts list =
+= Open EVSE V4.2 parts list =
 
 If you'd like to built your own EVSE controller board instead of ordering one, here are the parts that you will need.
 
