--- a/wiki/OpenEVSEv42partslist.wiki
+++ b/wiki/OpenEVSEv42partslist.wiki
@@ -34,7 +34,7 @@ http://farm9.staticflickr.com/8370/8437977311_28677cea78_n.jpg
 || Any || Any || Resistor 5%|| 2.8k|| R3,R4|| 2|| $0.09|| 
 || Any || Any || Resistor 5%|| 10k || R10,19,25,27,28,30|| 6|| $0.09 || 
 || Any || Any || Resistor 5%|| 20k || R15|| 1|| $0.09 || 
-|| Vishay BC|| MRS25000C2802FRP00|| Resistor HV 1%|| 28k 0.6w|| R12,R13|| 2|| $0.36|| http://www.digikey.com/product-detail/en/MRS25000C2802FRP00/PPC28.0KZCT-ND/594989 || 
+|| Vishay BC|| MRS25000C2802FRP00|| Resistor HV 1%|| 28k 0.6w|| R12,R13|| 2|| $0.36|| http://www.digikey.com/product-detail/en/MRS25000C2802FRP00 || 
 || Any || Any || Resistor 5%|| 56k || R5|| 1|| $0.09 || 
 || Any || Any || Resistor 5%|| 100k || R6,14,16|| 3|| $0.09 || 
 || Any || Any || Resistor 5%|| 200k || R7|| 1|| $0.09 || 
