Edited wiki page OpenEVSEv42partslist through web user interface.

--- a/wiki/OpenEVSEv42partslist.wiki
+++ b/wiki/OpenEVSEv42partslist.wiki
@@ -42,7 +42,7 @@ http://farm9.staticflickr.com/8370/8437977311_28677cea78_n.jpg
 || Vishay BC|| HVR2500001004FR500|| Resistor|| 1.0M|| R21|| 1|| $0.57 || http://www.digikey.com/product-detail/en/HVR2500001004FR500 ||
 || Any || Any || Cap (ceramic) || 18pf || C1,C2|| 2|| $0.44|| http://www.digikey.com/product-detail/en/SR151A180JAR ||
 || Any || Any || Cap (ceramic) || 22pf || C8|| 1|| $0.34|| http://www.digikey.com/product-detail/en/K220J15C0GF5TL2/BC1005CT-ND/286627||
-|| Any || Any || Cap (ceramic) || 0.1uf || C3,4,10-15,18,20,21,23-25|| 10|| $0.20|| http://search.digikey.com/scripts/dksearch/dksus.dll?vendor=0&keywords=+399-4266-ND || 
+|| Any || Any || Cap (ceramic) || 0.1uf || C3,4,10-15,18,20,21,23-25|| 10|| $0.20|| http://www.digikey.com/product-detail/en/C320C104M5U5TA || 
 || Any || Any || Cap (ceramic) || 0.33uf || C22|| 1|| $0.46|| http://www.digikey.com/product-detail/en/SR205E334MAR/478-5733-ND/2136293||
 || TDK Corp.|| FK18X5R1E334K|| Cap (ceramic) || 0.33uf low esr|| C6,C7|| 2|| $0.34|| http://www.digikey.com/product-detail/en/FK18X5R1E334K || 
 || TDK Corp.|| FK18X7R1E105K|| Cap (ceramic) || 1.0uf 25V|| C5,C6,C7|| 3|| $0.43|| http://www.digikey.com/product-detail/en/FK18X7R1E105K/445-8422-ND/2815352 ||
