Edited wiki page February through web user interface.

--- a/wiki/February.wiki
+++ b/wiki/February.wiki
@@ -100,4 +100,5 @@ Payment via paypal to chris1howell83@gmail.com
 || || Wicker || Built || LCD || Paid || Workshop ||
 || ||  troypearce  || Kit || LCD KIT || Paid || ||
 || || beaver || || RTC LCD kit EV Sim || Paid || ||
+|| || beebe || Built || RTC LCD Built EV Sim || Paid ||
  
