Edited wiki page February through web user interface.

--- a/wiki/February.wiki
+++ b/wiki/February.wiki
@@ -101,4 +101,7 @@ Payment via paypal to chris1howell83@gmail.com
 || ||  troypearce  || Kit || LCD KIT || Paid || ||
 || || beaver || || RTC LCD kit EV Sim || Paid || ||
 || || beebe || Built || RTC LCD Built EV Sim || Paid ||
+|| || leexx549 || Kit || LCD kit - EVsim || Paid || ||
+|| || xistent3 || Built || RTC Built - EVSim || Paid || ||
+
  
