Edited wiki page February through web user interface.

--- a/wiki/February.wiki
+++ b/wiki/February.wiki
@@ -104,7 +104,7 @@ Payment via paypal to chris1howell83@gmail.com
 || || leexx549 || Kit || LCD kit - EVsim || Paid || ||
 || || xistent3 || Built || RTC Built - EVSim || Paid || ||
 || || milinshah || built || RTC Built - EVSim || Paid || ||
-|| || trottier18 || Kit || || || Paid || ||
+|| || trottier18 || Kit ||  || Paid || ||
 
 
  
