Edited wiki page February through web user interface.

--- a/wiki/February.wiki
+++ b/wiki/February.wiki
@@ -105,6 +105,7 @@ Payment via paypal to chris1howell83@gmail.com
 || || xistent3 || Built || RTC Built - EVSim || Paid || ||
 || || milinshah || built || RTC Built - EVSim || Paid || ||
 || || trottier18 || Kit ||  || Paid || ||
+|| || bluesguy_1 || Built || RTC Built - EVsim || Paid || ||
 
 
  
