--- a/wiki/Workshop_NOCAL.wiki
+++ b/wiki/Workshop_NOCAL.wiki
@@ -24,11 +24,10 @@ Alameda, CA 94501
 || Part || Source || Cost || Quantity || Link ||
 || OpenEVSE Plus Board (Built) || OpenEVSE || $135 ($15 discount) || 1 || http://code.google.com/p/open-evse/wiki/Ordering ||
 || OpenEVSE LCD (Built) || OpenEVSE || $30 ($10 discount) || 1 || http://code.google.com/p/open-evse/wiki/Ordering ||
-|| J-1772 cable, 30 amps (A3435-PEV) || Leviton || $134.00 || 1 ||http://store.leviton.com/dp/B00912OT00#.UD18QGjEV68 ||
+|| J-1772 cable, 30 amps (A3435-PEV) || Leviton || $134.00 code LUVLEVTN || 1 ||http://store.leviton.com/dp/B00912OT00#.UD18QGjEV68 ||
 || Enclosure || Diversified Stage Inc. || 58.00 || 1 || https://ssl.diversifiedstage.com/estore/ ||
 || 30A Relay || Digikey || $13.03 || 1 ||  http://search.digikey.com/us/en/products/T92P7D22-12/PB486-ND/365921 ||
 || Current Transformer || Digikey || $10.65 || 1  ||http://search.digikey.com/us/en/products/CR8420-1000-G/582-1018-ND/1045174 ||
-|| FUSEHOLDER 30A AGU || Digikey || $22.15 || 1 ||http://www.digikey.com/scripts/DkSearch/dksus.dll?WT.z_header=search_go&lang=en&keywords=283-3382-ND&cur=USD||
 || VARISTOR 250V 72J 14MM CRIMPD LA (F5598CT-ND) || Digikey || $.62 || 2 || http://www.digikey.com/product-detail/en/V250LT20AP/F5598CT-ND/3307079 ||
 || FERRITE TUBULAR BEAD 19.05MM (240-2119-ND) || Digikey || $1.39 || 2  || http://www.digikey.com/scripts/DkSearch/dksus.dll?WT.z_header=search_go&lang=en&keywords=240-2119-ND&x=15&y=15&cur=USD ||
 || Quick Connect 1/4" Piggy back 10AWG || Digikey || $0.57 || 4 || http://www.digikey.com/product-detail/en/19013-0033/WM18717-ND/1642379 ||
@@ -39,7 +38,8 @@ Alameda, CA 94501
 || Waterproof Button (Green) || Adafruit || $5.36 || 1 || http://www.adafruit.com/products/560 ||
 || Strain Relief || Polycase || $7.00 || 2 || http://www.polycase.com/cg-17 ||
 || EATON GBK5 Ground Bar Kit || Home Depot || $3.95 || 1 || http://www.homedepot.com/p/t/100133761?catalogId=10053&langId=-1&keyword=GBK5&storeId=10051&N=5yc1v&R=100133761 ||
-|| 30A 250V Fuse||  ||  ||  ||  ||
+|| 30A 250V Fuse || Zoro Tools || 3.09 || 2 || http://www.zorotools.com/g/00010027/k-G1141323/ ||
+|| FUSEHOLDER 30A AGU || Zoro Tools || $7.21 || 1 || http://www.zorotools.com/g/Midget%20Fuse%20Block/00010592/||
 || Hookup wire 20AWG Red, Black, Green || Radio Shack || $8.99 || 1 ||  http://www.radioshack.com/product/index.jsp?productId=2049743 ||
 
 || *Total* || *~$475* ||
