--- a/wiki/February.wiki
+++ b/wiki/February.wiki
@@ -108,6 +108,8 @@ Payment via paypal to chris1howell83@gmail.com
 || || trottier18 || Kit ||  || Paid || Shipped 4/11 ||
 || || bluesguy_1 || Built || RTC Built - EVsim || Paid || ||
 || || silva || Built || RTC Built - EVSim || Paid || ||
+|| || Vince - INT || Kit || RTC Kit || Paid || ||
+|| || jdbui || Built || || Paid || ||
 
 
 
