--- a/wiki/February.wiki
+++ b/wiki/February.wiki
@@ -108,8 +108,12 @@ Payment via paypal to chris1howell83@gmail.com
 || || trottier18 || Kit ||  || Paid || Shipped 4/11 ||
 || || bluesguy_1 || Built || RTC Built - EVsim || Paid || ||
 || || silva || Built || RTC Built - EVSim || Paid || ||
+|| || Jav || Kit || || Paid || Shipped 4/11|| ||
 || || Vince - INT || Kit || RTC Kit || Paid || ||
 || || jdbui || Built || || Paid || ||
+|| || noelingle || Kit || LCD kit - EVSIM || Paid || ||
+
+
 
 
 
