--- a/wiki/February.wiki
+++ b/wiki/February.wiki
@@ -95,10 +95,11 @@ Payment via paypal to chris1howell83@gmail.com
 || || j.scutzlas || Built || LCD RTC built || Paid || ||
 || || jbesteele || Built || LCD RTC Built || Paid || || 
 || || honks || Built || LCD Built || Paid || ||
-|| || waynesb || Built || RTC - EV Sim || Paid || Workshop ||
 || || karahalios || Kit || || Paid || Shipped 4/11 ||
+|| || waynesb || Built || RTC - EV Sim || Paid || Workshop ||
 || || Keenan || Built || LCD || Paid || Workshop ||
 || || Wicker || Built || LCD || Paid || Workshop ||
+|| || sonomadb ~2|| Built || RTC Built || Workshop || 
 || ||  troypearce  || Kit || LCD KIT || Paid || Shipped 4/11||
 || || beaver || || RTC LCD kit EV Sim || Paid || ||
 || || beebe || Built || RTC LCD Built EV Sim || Paid ||
@@ -113,6 +114,7 @@ Payment via paypal to chris1howell83@gmail.com
 || || jdbui || Built || || Paid || ||
 || || noelingle || Kit || LCD kit - EVSIM || Paid || ||
 || || mjrdye - INT || kit || LCD kit || Paid || ||
+|| || w.decker || || RTC Kit - EVsim || Paid || ||
 
 
 
