--- a/wiki/sidebar.wiki
+++ b/wiki/sidebar.wiki
@@ -16,7 +16,7 @@
     * [EVSE_LORDSn1per EVSE by Phillip Carlson]
     * [EVSE_by_4Dolio 30A portable EVSE by 4Dolio]
   * *SAE J1772 Standard*
-    * [J1772Basics Basics of J1772]
+    * [J1772Basics Basics of J1772] 
     * [J1772CableSources Sources for J1772 cables]
   * *Frequently Asked Questions*
     * [FAQ FAQ]
@@ -27,6 +27,8 @@
     * [OpenEVSE_LCD_spec Add a display]
     * [MaxCurrent Set Default Current]
     * [AssemblePlusV2 Build EVSE Plus V2 kit]
+    * [AssemblyGuide] 30A OpenEVSE Plus v1/v2
+    * [EVSimulator] Assembly and Usage
   * *Workshops*
     * [OpenEVSE_Workshop Socal OpenEVSE Workshop December 1,2012]
     * [Workshop_NOCAL Northern Ca OpenEVSE Workshop May 18, 2013]
